--- a/templates/forum/main.html
+++ b/templates/forum/main.html
@@ -2,35 +2,52 @@
 {% block title %}Forum{% endblock %}
 
 {% block content %}
-    <h1 class="mb-4">Forum</h1>
-
-    <main>
-        {% for thread in threads %}
-            <div class="card mb-3">
-                <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted"> {{ thread.author.username }} </h6>
-                    <h4 class="card-title">{{ thread.title }}</h4>
-                    {% comment %}
-                        {% for tag in thread %}
-                            <span class="badge bg-secondary">{{ tag.name }}</span>
-                        {% endfor %}
-                    {% endcomment %}
-                    <p class="card-text">{{ thread.content|truncatewords:30 }}</p>
+<div class="container my-4">
+    <div class="row justify-content-between">
+        <h1 class="mb-4">Forum</h1>
+        <main class="col-md-9">
+            {% for thread in threads %}
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            {{ thread.author.username }}
+                        </h6>
+                        <h4 class="card-title">{{ thread.title }}</h4>
+                        {% comment %}
+                            {% for tag in thread %}
+                                <span class="badge bg-secondary">{{ tag.name }}</span>
+                            {% endfor %}
+                        {% endcomment %}
+                        <p class="card-text">
+                            {{ thread.posts.first.content|truncatewords:30 }}
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <p class="card-text mb-1">
+                            <small class="text-muted">
+                                Created: {{ thread.created_at|date:"d-m-Y" }}
+                            </small><br>
+                            <small class="text-muted">
+                                Updated: {{ thread.updated_at|date:"d-m-Y" }}
+                            </small>
+                        </p>
+                        <p class="card-text">
+                            {{ thread.posts.count }} Comments
+                        </p>
+                        <a href="#" class="btn btn-primary">View Thread</a>
+                    </div>
                 </div>
-                <div class="card-footer">
-                    <p class="card-text">
-                        <small class="text-muted">Created at {{ thread.created_at|date:"d-m-Y" }}</small>
-                        <small class="text-muted">Last updated at {{ thread.updated_at|date:"d-m-Y" }}</small>
-                    </p>
-                    <p class="card-text">{{ thread.posts.count }} Comments</p>
-                    <a  class="btn btn-primary">View Thread</a>
+            {% endfor %}
+        </main>
+
+        <aside class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <button class="w-100 mb-3">Start New Discussion</button>
+                    <p class="text-muted small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, quam minus temporibus et incidunt impedit obcaecati adipisci corporis dolorem voluptates odit recusandae sunt earum distinctio eum quas iure, aliquid magnam similique rerum? Laboriosam voluptatem asperiores molestiae voluptate officiis laudantium corporis deserunt maxime alias eaque amet id error quisquam reiciendis ipsam, quasi non, possimus quo. Ducimus nisi veritatis ratione cupiditate doloribus dicta expedita quos quae quia corporis ab itaque, fuga vel numquam dignissimos eaque obcaecati blanditiis esse harum? Praesentium adipisci maxime itaque veniam sed odit modi vero sapiente obcaecati blanditiis inventore consequuntur corporis, quisquam, numquam quaerat reprehenderit perspiciatis beatae voluptatum! Ullam eaque quaerat cumque tempore et voluptatibus veniam possimus obcaecati a impedit architecto odit ea animi vel harum fugiat, sequi excepturi inventore assumenda aut dicta, quae labore ut unde! Architecto eum velit soluta perspiciatis excepturi doloribus minus dolor esse odit?</p>
                 </div>
             </div>
-        {% endfor %}
-    </main>
-
-    <aside>
-        <button>Start New Discussion</button>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error repellendus laboriosam quam exercitationem temporibus? Quidem cupiditate dolor amet qui aliquam eveniet sit! Dolorem mollitia facilis dolorum, veniam temporibus dicta incidunt possimus minima eligendi illo ullam quis, labore velit repudiandae vitae aliquam laudantium? Maiores consequatur cum quasi, officia quaerat est magnam quos facilis dolor, commodi alias exercitationem, expedita culpa fugit veniam aut! Odit veniam natus nulla tenetur consequatur voluptas, ducimus, neque debitis deleniti consequuntur at obcaecati, vel minus suscipit maxime aliquid asperiores magnam praesentium unde vero nemo recusandae nihil officia. Nemo atque perferendis dolorum modi tempore quasi eaque quibusdam quaerat laborum!</p>
-    </aside>
+        </aside>
+    </div>
+</div>
 {% endblock %}
