--- a/templates/forum/thread.html
+++ b/templates/forum/thread.html
@@ -6,15 +6,21 @@
 
 {% block content %}
     <main class="container my-4">
-        <header class="mb-4">
-            <h1>{{ thread.title }}</h1>
-            <p class="text-muted">
+        <header class="card mb-4 p-3">
+            <h1 class="card-title mb-2">{{ thread.title }}</h1>
+            <p class="card-subtitle text-muted">
                 Posted by <strong>{{ thread.author.username }}</strong> on {{ thread.created_at|date:"d.m.Y" }}
             </p>
         </header>
 
+        {% if thread.posts.count == 1 %}
+            <h3>1 Post:</h3>
+        {% else %}
+            <h3>{{thread.posts.count}} Posts:</h3>
+        {% endif %}
+
         {% for post in thread.posts.all %}
-            <article class="card mb-3">
+            <article class="card mb-3 mx-4">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                         <h6 class="card-subtitle mb-2 text-muted">{{ post.author.username }}</h6>
