posts and threads creating

--- a/templates/forum/main.html
+++ b/templates/forum/main.html
@@ -43,7 +43,14 @@
         <aside class="col-md-3">
             <div class="card">
                 <div class="card-body">
-                    <button class="w-100 mb-3">Start New Discussion</button>
+                    <form method="get" action="{% url 'forum:create_thread' %}">   
+                        {% csrf_token %}
+                        {% if request.user.is_authenticated %}
+                            <button class="w-100 mb-3" type="submit">Start New Discussion</button>
+                        {% else %}
+                            <button class="w-100 mb-3" type="submit" disabled>Login to Start Discussion</button>
+                        {% endif %}
+                    </form>
                     <p class="text-muted small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta, quam minus temporibus et incidunt impedit obcaecati adipisci corporis dolorem voluptates odit recusandae sunt earum distinctio eum quas iure, aliquid magnam similique rerum? Laboriosam voluptatem asperiores molestiae voluptate officiis laudantium corporis deserunt maxime alias eaque amet id error quisquam reiciendis ipsam, quasi non, possimus quo. Ducimus nisi veritatis ratione cupiditate doloribus dicta expedita quos quae quia corporis ab itaque, fuga vel numquam dignissimos eaque obcaecati blanditiis esse harum? Praesentium adipisci maxime itaque veniam sed odit modi vero sapiente obcaecati blanditiis inventore consequuntur corporis, quisquam, numquam quaerat reprehenderit perspiciatis beatae voluptatum! Ullam eaque quaerat cumque tempore et voluptatibus veniam possimus obcaecati a impedit architecto odit ea animi vel harum fugiat, sequi excepturi inventore assumenda aut dicta, quae labore ut unde! Architecto eum velit soluta perspiciatis excepturi doloribus minus dolor esse odit?</p>
                 </div>
             </div>
