--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
             <nav>
                 <a href="{% url 'home' %}" class="text-white me-3 text-decoration-none">Головна</a>
                 <a href="{% url 'forum:main' %}" class="text-white me-3 text-decoration-none">Форум</a>
+                <a href="{% url 'voting:poll_list' %}" class="text-white me-3 text-decoration-none">Голосування</a>
+                <a href="{% url 'register:profile' %}" class="text-white me-3 text-decoration-none">Профіль</a>
             </nav>
         </div>
     </header>
