--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -15,7 +15,7 @@
   <p><strong>Телефон:</strong> {{ profile.phone }}</p>
   <p><strong>Біо:</strong> {{ profile.bio }}</p>
   <p><strong>Роль:</strong> {{ profile.get_role_display }}</p>
-  <button class="btn btn-main mt-3" onclick="toggleEdit(true)">✏️ Редагувати</button>
+  <button class="btn btn-main mt-3" onclick="toggleEdit(true)"> Редагувати</button>
 </div>
 
 <div id="profile-edit" style="display: none;">
