--- a/templates/polls/poll_results.html
+++ b/templates/polls/poll_results.html
@@ -11,6 +11,6 @@
       </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'poll_detail' poll.id %}" class="btn btn-outline-primary mt-3">Назад до голосування</a>
+  <a href="{% url 'voting:poll_detail' poll.id %}" class="btn btn-outline-primary mt-3">Назад до голосування</a>
 </div>
 {% endblock %}
