fixing errors with "register" and logging out of the account

--- a/templates/registration/home_auth.html
+++ b/templates/registration/home_auth.html
@@ -6,7 +6,7 @@
   <p class="mb-4">Оберіть дію, щоб продовжити:</p>
 
   <div class="d-grid gap-3">
-    <a href="{% url 'register' %}" class="btn btn-main">📝 Зареєструватися</a>
-    <a href="{% url 'login' %}" class="btn btn-main">🔑 Увійти</a>
+    <a href="{% url 'register:register' %}" class="btn btn-main">📝 Зареєструватися</a>
+    <a href="{% url 'register:login' %}" class="btn btn-main">🔑 Увійти</a>
   </div>
 {% endblock %}
