--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -47,7 +47,7 @@
     <button type="submit" class="btn btn-main">Зареєструватися</button>
 
     <div class="mt-3 text-center">
-      <p>Вже маєте акаунт? <a href="{% url 'login' %}" class="text-link">Увійти</a></p>
+      <p>Вже маєте акаунт? <a href="{% url 'register:login' %}" class="text-link">Увійти</a></p>
     </div>
   </form>
 {% endblock %}
