--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,7 @@
     <button type="submit" class="btn btn-main">Увійти</button>
 
     <div class="mt-3 text-center">
-      <p>Немає акаунту? <a href="{% url 'register' %}" class="text-link">Зареєструватися</a></p>
+      <p>Немає акаунту? <a href="{% url 'register:register' %}" class="text-link">Зареєструватися</a></p>
     </div>
   </form>
 {% endblock %}
