--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -17,6 +17,7 @@
   <p><strong>Роль:</strong> {{ profile.get_role_display }}</p>
   <button class="btn btn-main mt-3" onclick="toggleEdit(true)"> Редагувати</button>
 </div>
+<a href="{% url 'register:logout' %}" class="btn btn-danger">Вийти</a>
 
 <div id="profile-edit" style="display: none;">
   <form method="POST" enctype="multipart/form-data">
