fix bag with main

--- a/templates/polls/poll_results.html
+++ b/templates/polls/poll_results.html
@@ -1,4 +1,4 @@
-<!-- polls/poll_results.html -->
+<!-- voting/poll_results.html -->
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
