--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="h4 mb-0">Шось там сайт</h1>
             <nav>
-                <a href="{% url 'home' %}" class="text-white me-3 text-decoration-none">Головна</a>
+                <a href="{% url 'main:home' %}" class="text-white me-3 text-decoration-none">Головна</a>
                 <a href="{% url 'forum:main' %}" class="text-white me-3 text-decoration-none">Форум</a>
                 <a href="{% url 'voting:poll_list' %}" class="text-white me-3 text-decoration-none">Голосування</a>
                 <a href="{% url 'register:profile' %}" class="text-white me-3 text-decoration-none">Профіль</a>
