--- a/templates/polls/poll_detail.html
+++ b/templates/polls/poll_detail.html
@@ -1,4 +1,4 @@
-<!-- polls/poll_detail.html -->
+<!-- voting/poll_detail.html -->
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
