--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% block title %}Вхід{% endblock %}
 
 {% block content %}
-  <h2>🔑 Вхід до Treking</h2>
+  <h2>🔑 Вхід до Сайту</h2>
 
   {% if messages %}
     <div class="mb-3">
