--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
                 <nav class="d-flex align-items-center">
                     <a href="{% url 'main:home' %}" class="text-white me-3 text-decoration-none">Головна</a>
                     <a href="{% url 'forum:main' %}" class="text-white me-3 text-decoration-none">Форум</a>
-                    <a href="{% url 'voting:poll_list' %}" class="text-white me-3 text-decoration-none">Голосування</a>
+                    <a href="{% url 'voting:voting_list' %}" class="text-white me-3 text-decoration-none">Голосування</a>
                     <a href="{% url 'portfolio:project_list' %}" class="text-white me-3 text-decoration-none">Портфоліо</a>
-
+                    <a href="{% url 'polls:survey_list' %}" class="text-white me-3 text-decoration-none">Опитування</a>
                     {% if request.user.is_authenticated %}
                         <span class="me-3">👤 {{ request.user.username }}</span>
                         <form method="post" action="{% url 'register:logout' %}">
