--- a/templates/voting/voting_detail.html
+++ b/templates/voting/voting_detail.html
@@ -1,4 +1,4 @@
-<!-- voting/poll_detail.html -->
+<!-- voting/voting_detail.html -->
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
@@ -11,6 +11,6 @@
       </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'voting:poll_results' poll.id %}" class="btn btn-secondary">Переглянути результати</a>
+  <a href="{% url 'voting:voting_results' poll.id %}" class="btn btn-secondary">Переглянути результати</a>
 </div>
 {% endblock %}
