--- a/templates/school_diary/add_grade.html
+++ b/templates/school_diary/add_grade.html
@@ -3,6 +3,7 @@
     <div class="modal-content">
       <form method="post" id="addGradeForm">
         {% csrf_token %}
+        <input type="hidden" name="grade_id" id="gradeId" value="">
         <div class="modal-header">
           <h5 class="modal-title">Додати оцінку</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
