--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
                     <a href="{% url 'forum:main' %}" class="text-white me-3 text-decoration-none">Форум</a>
                     <a href="{% url 'voting:poll_list' %}" class="text-white me-3 text-decoration-none">Голосування</a>
                     <a href="{% url 'portfolio:project_list' %}" class="text-white me-3 text-decoration-none">Портфоліо</a>
+                    <a href="{% url 'gallery:gallery' %}" class="text-white me-3 text-decoration-none">Галерея</a>
+                    <a href="{% url 'announcements:list' %}" class="text-white me-3 text-decoration-none">Оголошення</a>
+
 
                     {% if request.user.is_authenticated %}
                         <span class="me-3">👤 {{ request.user.username }}</span>
