--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                     <a href="{% url 'gallery:gallery' %}" class="text-white me-3 text-decoration-none">Галерея</a>
                     <a href="{% url 'announcements:announcement_list' %}" class="text-white me-3 text-decoration-none">Оголошення</a>
                     <a href="{% url 'diary:subjects' %}" class="text-white me-3 text-decoration-none">Щоденник</a>
-
+                    <a href="{% url 'events:event_list' %}" class="text-white me-3 text-decoration-none">Події</a>
                     {% if request.user.is_authenticated %}
                         <span class="me-3">👤 {{ request.user.username }}</span>
                         <form method="post" action="{% url 'register:logout' %}">
